--- a/src/components/Contacts/styles.css
+++ b/src/components/Contacts/styles.css
@@ -1,4 +1,4 @@
-/* .contacts-container {
+.contacts-container {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -77,4 +77,4 @@
   padding: 10px;
   background-color: #636668;
   height: 90%;
-} */
+}
