--- a/src/components/Messages/styles.css
+++ b/src/components/Messages/styles.css
@@ -1,4 +1,4 @@
-/* #scrollableDiv::-webkit-scrollbar {
+#scrollableDiv::-webkit-scrollbar {
   width: 6px;
 }
 
@@ -20,7 +20,7 @@
   height: 100%;
   scrollbar-width: thin;
   scrollbar-color: white transparent;
-} */
+}
 
 .profile-avatar {
   width: 40px;
@@ -46,12 +46,17 @@
 }
 .message-container {
   flex: 3;
-
+  border: 2px solid red;
+  /* font-size: 1cm; */
   padding: 20px;
   height: 100%;
+  position: relative;
 }
 
 .messenger-footer {
+  position: absolute;
+  top: 90%;
+  width: 95%;
   display: flex;
   align-items: center;
   padding: 10px;
